--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
-    --cor-de-fundo: #00030C;
+    --cor-de-fundo: #000B3C;
     --fonte-principal: 'Inter';
 }
 
@@ -14,7 +14,7 @@ body {
     font-weight: 400;
 }
 
-* {
+*{
     margin: 0;
     padding: 0;
 }
@@ -39,10 +39,9 @@ body {
     padding: 1em;
     color: var(--branco-principal);
     display: block;
-    text-decoration: none;
+    text-decoration: none;  
     margin-bottom: 1em;
 }
-
 .botao_secundario {
     background-color: transparent;
     border: 2px solid var(--branco-principal)
@@ -115,7 +114,6 @@ body {
     font-size: 32px;
     color: var(--branco-principal);
 }
-
 .rodape {
     text-align: center;
     margin: 5em 3em;
@@ -137,5 +135,5 @@ body {
 .rodape__texto {
     margin: 1em 0;
     color: var(--cinza-secundario);
-    font-size: 14p
+    font-size: 14px;
 }
